# project-cars

./: .gitignore  CLAUDE.md  DIRECTION.md  README.md  compose.yml  mise.toml  pyproject.toml
.githooks/: pre-commit
config/: buyer-profile.yaml  scoring-weights.yaml  sources.yaml
db/migrations/: 0001.create-core-tables.sql
docs/architecture/: data-sources.md  harness-principles.md
docs/plans/: initial-plan.md  roadmap.md
src/: cli.py  config.py  db.py  db_migrate.py  errors.py  models.py
tests/: conftest.py  helpers.py
tests/fixtures/fipe/: brands.json  models_toyota.json  price_corolla_2023.json
tests/integration/: test_db_integration.py
tests/unit/: test_cli.py  test_config.py  test_db.py  test_errors.py  test_models.py
