[project]
name = "project-cars"
version = "0.1.0"
description = "Agent-driven car buying tool for the Brazilian market"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.12",
    "pdfplumber>=0.11",
    "pydantic>=2.10",
    "typer>=0.15",
    "rich>=13.9",
    "psycopg[binary]>=3.2",
    "pyyaml>=6.0",
    "yoyo-migrations>=9.0",
]

[project.scripts]
car-selector = "src.cli:app"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[dependency-groups]
dev = [
    "ruff>=0.9",
    "pytest>=8.3",
    "pytest-httpx>=0.35",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
